# consec

./: .dockerignore  .gitignore  AGENTS.md  DESIGN_BRIEF.md  DIAGRAM_BRIEF.md  Dockerfile  FULL_PROJECT_CONTEXT.md  LICENSE  PROJECT or Internship Synopsis Format.docx  PROJECT_REPORT.md  README.md  demo_bad.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
consec/: cli.py  dockerfile.py  embeddings.py  exporter.py  llm.py  models.py  parser.py  prompts.py  rag.py  rules.py  utils.py  vectordb.py
data/sample_scans/: alpine_clean.json  nginx_scan.json
tests/: test_cli.py  test_dockerfile.py  test_integration.py  test_models.py  test_parser.py  test_rag.py  test_rules.py  test_vectordb.py
